--- a/O3/Latex/Analisi.tex
+++ b/O3/Latex/Analisi.tex
@@ -1,15 +1,17 @@
 \section{Analisi}
 
+\begin{wrapfigure}{r}{50mm}
+    \vspace{-10mm}
+    \begin{center}
+        \includegraphics[width=48mm]{drawing.pdf}
+    \end{center}
+    \vspace{-10mm}
+\end{wrapfigure}
+
 Poiché abbiamo misurato tre valori distinti di intensità massima $I\ped{max}$ e $\vartheta\ped{max}$, occorre innanzitutto ricavarne un unico valore. Abbiamo quindi fatto la media dei valori registrati. Dopo questo primo passo ci siamo assicurati di esprimere tutti gli angoli rispetto
 all'angolo $\vartheta\ped{max}$, ovvero lo abbiamo sottratto a tutti gli altri angoli.
 
-\begin{wrapfigure}{r}{50mm}
-  \begin{center}
-    \includegraphics{drawing.pdf}
-  \end{center}
-\end{wrapfigure}
-
-Abbiamo graficato i dati, ottenendo lo spettacolare grafico in Figura XXX-ANAL-GATE-4-PORNO-GAY-XXX, tracciando una linea orrizzontale
+Abbiamo graficato i dati, ottenendo lo spettacolare grafico in Figura \ref{fig:graph}, tracciando una linea orrizzontale
 che corrisponde al 5\% dell'intensità massima. Chiaramente la curva interseca due volte la linea del 5\%, poiché è simmetrica.
 Si possono quindi trovare due valori diversi di apertura numerica, e noi li abbiamo calcolati entrambi, come segue.
 Dal grafico abbiamo trovato i punti tra i quali passa la linea corrispondente al 5\%,
