--- a/O3/Latex/Relazione.tex
+++ b/O3/Latex/Relazione.tex
@@ -13,7 +13,7 @@
 \usepackage[bookmarks, hidelinks]{hyperref}
 \usepackage{float}
 \usepackage{wrapfig}
-%\usepackage{sidecap}
+\usepackage{sidecap}
 
 \begin{document}
 
