dio bo' quanti file

--- a/O3/Latex/Analisi.tex
+++ b/O3/Latex/Analisi.tex
@@ -29,8 +29,8 @@ Da cui si ha, banalmente:
     \emph{NA} = \frac{\Delta \vartheta}{\Delta I} (0.05 \cdot I\ped{max} - I_1) + \vartheta_1
 \end{equation}
 
-I valori che noi abbiamo calcolato sono i seguenti:
+I valori che noi abbiamo calcolato risultano compatibili e sono i seguenti:
 
 \begin{equation}
-    \emph{NA}_1 = 0.505 \pm 0.01 \qquad \emph{NA}_2 = -0.5013 \pm 0.007
+    \emph{NA}_1 = 0.505 \pm 0.01 \qquad \emph{NA}_2 = -0.5033 \pm 0.007
 \end{equation}
