--- a/O4/Latex/Title.tex
+++ b/O4/Latex/Title.tex
@@ -1,13 +1,15 @@
 \begin{center}
 
-     	{\huge .}
-	\vspace{0.5cm}
+     	{\huge Indici di rifrazione di aria e vetro. \\}
+     	\vspace{0.2cm}
+     	{\huge Fenomeni di diffrazione e lunghezza d'onda della luce.}
+	\vspace{0.3cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
       	{Bazzanella.Davide@gmail.com} \\
 		{\large Gruppo A6} \\
 	
-	\vspace{0.3cm}
-      	{\large }
+	\vspace{0.1cm}
+      	{\large 2 dicembre 2013}
 
 \end{center}
