--- a/O4/Latex/Introduzione.tex
+++ b/O4/Latex/Introduzione.tex
@@ -1,2 +1,15 @@
 \section{Introduzione}
 
+Gli scopi di questa relazione di laboratorio sono di ricavare il vaore dell'indice di rifrazione dell'aria e del vetro sfruttando il principio dell'interferometro di Michelson. Inoltre saranno eseguire vari esperimenti relativi ai fenomeni di diffrazione.
+
+A tal fine la relazione sarà divisa in due parti distinte per facilitarne la lettura.
+
+%\begin{itemize}
+%	\item{misura di una fenditura regolabile tramite un fascio di luce laser di lunghezza d'onda ($\lambda$) nota;}
+%	\item{misura di fenditure di larghezza nota;}
+%	\item{misura della diffrazione di un foro circolare di dimensione nota;}
+%	\item{valtazione del passo di vari reticoli con un laser di lunghezza d'onda ($\lambda$) nota;}
+%	\item{valutazione della lunghezza d'onda ($\lambda$) di un laser utilizzando un reticolo;}
+%	\item{misura di un oggetto a piacere come un capello (appartenente all'entità umana dentificabile come Davide Bazzanella);}
+%\end{itemize}
+
