--- a/O4/Latex/Relazione.tex
+++ b/O4/Latex/Relazione.tex
@@ -19,8 +19,10 @@
 
 \input{Title.tex}
 \input{Introduzione.tex}
-\input{Materiale.tex}
-\input{Procedimento.tex}
+\input{Materiale_Michelson.tex}
+\input{Procedimento_Michelson.tex}
+\input{Materiale_Diffrazione.tex}
+\input{Procedimento_Diffrazione.tex}
 %\input{conclusioni.tex}
 
 \end{document}
