--- a/O4/Latex/Materiale_Michelson.tex
+++ b/O4/Latex/Materiale_Michelson.tex
@@ -9,9 +9,10 @@ Il materiale a nostra disposizione è il seguente:
     \item{camera da vuoto e pompa rotativa con un range di funzionamento che va da 1 atmosfera a $10^{-1}$ atmosfere;}
 	\item{valvola a spillo per la regolazione del flusso di aria in entrata in camera;}
 	\item{sistema per modificare l'angoo di incidenza ($\theta_i$) di un vetro;}
-	\item{sorgente luminosa laser di luce verde, quindi con lunghezza d'onda ($\lambda$) nota di valore: XXX. Questa sorgente luminosa è una sorgente coerente, che emette raggi collimati;}
+	\item{sorgente luminosa laser di luce verde, quindi con lunghezza d'onda ($\lambda$) nota di valore: XXX;}
 	\item{lente di ingrandimento per visualizzare meglio i raggi luminos sullo schermo;}
 \end{itemize}
+Ricordiamo che il laser lo si può approssiamre ad una sorgente monocromatica di luce coerente, inoltre i raggi risultano essere collimati ovvero paralleli tra di loro.
 
 \subsection{Esecuzione dell'esperienza}
 La prima operazione fatta è stata quella di verificare assieme all'esercitatore il corretto allineamento dell'interferometro. Abbiamo infatti notato che se lo specchio mobile e lo schermo non sono paralleli tra di loro, sullo schermo si vedrebbero i due picchi di intensità luminosa massima non sovrapposti l'uno sull'altro. Risulterebbero infatti sfasati tra di loro a tal punto che i due picchi sono perfettamente distinguibili.
@@ -21,9 +22,16 @@ Facciamo notare che nonostante l'attenzione prestata, lo specchio e lo schermo n
 Detto questo la procedura eseguita per ricavare l'indice di rifrazione dell'aria è la seguente:
 \begin{itemize}
 	\item{abbiamo installato sul sistema, tra lo specchi mobile e lo specchi semitrasparente una piccola camera da vuoto;} %Infatti variando la pressione dell'aria interna alla camera da vuoto si varia l'indice di rifrazione di quest'ultima. Pertanto il cammino ottico compiuto dal raggio lumnoso riflesso risulta essere differente da quello del raggio luminoso rifratto;}
-	\item{partendo con la camera da vuoto a pressione atmosferica abbiamo man mano creato il vuoto all'interno della camera regolando l'apertura della valvola a spillo;}
-	\item{ad intervalli regolari di pressione, ogni $10^{-6}$ Pascal a scendere, abbiamo annotato il numero di frange di interferenza passate sullo schermo;}
-	\item{;}
-\end{itemize} 
+	\item{partendo con la camera da vuoto a pressione atmosferica abbiamo man mano creato il vuoto all'interno della camera regolando l'apertura della valvola a spillo. Siamo arrivati ad una pressione limite di $10^{-4}\, \si{\pascal}$ ;}
+	\item{ad intervalli regolari di pressione, ogni $10^{-4}\, \si{\pascal}$ a scendere, abbiamo annotato il numero di frange di interferenza passate sullo schermo;}
+\end{itemize}
+
+\subsection{Analisi Dati}
+
+Per ricavare l'indice di rifrazione dell'aria abbiamo sfruttato la legge fisica che ci dice che:
+\begin{equation}
+	\text{numero di frange} \,=\, \frac{\text{cammino ottico}}{\lambda}
+\end{equation}
+dove con $\lambda$ si indica la lunghezza d'onda del laser.
 
   
