--- a/O4/Latex/Materiale_Michelson.tex
+++ b/O4/Latex/Materiale_Michelson.tex
@@ -32,6 +32,8 @@ Per ricavare l'indice di rifrazione dell'aria abbiamo sfruttato la legge fisica 
 \begin{equation}
 	\text{numero di frange} \,=\, \frac{\text{cammino ottico}}{\lambda}
 \end{equation}
-dove con $\lambda$ si indica la lunghezza d'onda del laser.
+dove con $\lambda$ si indica la lunghezza d'onda del laser.\\
 
-  
+Ricordiamo che a condizione di pressione costante il cammino ottico percorso dai due raggi luminosi risulta essere lo stesso.
+Quindi lo scopo sarà quello di confrontare il numero di frange contate con la differenza di pressione rilevata. Infatti variando la pressione nella camera da vuoto si varia l'indice di rifrazione dell'aria. Questo provoca una variazione nel cammino ottico del raggio riflesso dallo specchio semitrasparente e quindi fenomeni di diffrazione che saranno sempre più accentuati man mano che l'indice di rifrazione dell'aria varia infunzione della pressione interna alla camera. buzz culo !!!!
+Sapendo che il cammino ottico è pari a due volte la lunghezza della camera da vuoto moltiplicata per lindice di rifrazione del gas ivi contenuto ...
