errori sistemati meta

--- a/O4/Latex/Introduzione.tex
+++ b/O4/Latex/Introduzione.tex
@@ -1,8 +1,10 @@
 \section{Introduzione}
 
-Gli scopi di questa relazione di laboratorio sono di ricavare il vaore dell'indice di rifrazione dell'aria e del vetro sfruttando il principio dell'interferometro di Michelson. Inoltre saranno eseguire vari esperimenti relativi ai fenomeni di diffrazione.
+Gli scopi di questa relazione di laboratorio sono di ricavare il valore dell'indice di rifrazione dell'aria e del vetro usando
+l'interferometro di Michelson. Inoltre abbiamo eseguito vari esperimenti relativi ai fenomeni di diffrazione, calcolando la larghezza
+di alcuni fili e fenditure e ricavando la lunghezza d'onda della luce laser usata.
 
-A tal fine la relazione sarà divisa in due parti distinte per facilitarne la lettura.
+La relazione sarà divisa in due parti distinte per facilitarne la lettura, poiché i due esperimenti sono distinti.
 
 %\begin{itemize}
 %	\item{misura di una fenditura regolabile tramite un fascio di luce laser di lunghezza d'onda ($\lambda$) nota;}
