--- a/O4/Latex/Materiale_Michelson.tex
+++ b/O4/Latex/Materiale_Michelson.tex
@@ -1,39 +1,18 @@
 \section{Interferometro di Michelson}
 
-Lo scopo in questa prima parte della relazione è quello di ricavare il valore dell'indice di rifrazione dell'aria e di un vetro.
+Lo scopo in questa prima parte della relazione è quello di ricavare il valore dell'indice di rifrazione dell'aria e di un tipo di vetro.
 
 \subsection{Materiale}
-Il materiale a nostra disposizione è il seguente:
+
+Il materiale a nostra disposizione era il seguente:
 \begin{itemize}
-	\item{kit di interferometria di Michelson premontato e prealineato;}
-    \item{camera da vuoto e pompa rotativa con un range di funzionamento che va da 1 atmosfera a $10^{-1}$ atmosfere;}
-	\item{valvola a spillo per la regolazione del flusso di aria in entrata in camera;}
-	\item{sistema per modificare l'angoo di incidenza ($\theta_i$) di un vetro;}
-	\item{sorgente luminosa laser di luce verde, quindi con lunghezza d'onda ($\lambda$) nota di valore: XXX;}
-	\item{lente di ingrandimento per visualizzare meglio i raggi luminos sullo schermo;}
+	\item{Interferometro di Michelson premontato e prealineato;}
+    \item{Camera da vuoto e pompa a membrana per la misura dell'indice di rifrazione dell'aria;}
+    \item{Vetro di cui misurare l'indice di rifrazione;}
+	\item{Valvola a spillo per la regolazione del flusso di aria in uscita dalla camera;}
+	\item{Goniometro per modificare e misurare l'angolo di incidenza ($\theta_i$) della luce sul vetro. Il goniometro aveva una risoluzione di misura di 0.1 gradi;}
+    \item{Laser di luce verde, di lunghezza d'onda $\lambda = \SI{543.5}{\nano\metre}$;}
 \end{itemize}
-Ricordiamo che il laser lo si può approssiamre ad una sorgente monocromatica di luce coerente, inoltre i raggi risultano essere collimati ovvero paralleli tra di loro.
+Ricordiamo che il laser è una sorgente di luce monocromatica e coerente, inoltre i raggi risultano essere collimati ovvero paralleli tra di loro.
 
-\subsection{Esecuzione dell'esperienza}
-La prima operazione fatta è stata quella di verificare assieme all'esercitatore il corretto allineamento dell'interferometro. Abbiamo infatti notato che se lo specchio mobile e lo schermo non sono paralleli tra di loro, sullo schermo si vedrebbero i due picchi di intensità luminosa massima non sovrapposti l'uno sull'altro. Risulterebbero infatti sfasati tra di loro a tal punto che i due picchi sono perfettamente distinguibili.
 
-Facciamo notare che nonostante l'attenzione prestata, lo specchio e lo schermo non sono risultati essere perfettamente paralleli tra di loro. Questo comporta che i due raggi luminosi incidenti sullo schermo non sono allineati tra di loro. Infatti sullo schermo si visualizzano in alternanza delle frange di interferenza costruttiva e distruttiva, ovvero picchi luminosi e non che si alternano con regolarità.
-
-Detto questo la procedura eseguita per ricavare l'indice di rifrazione dell'aria è la seguente:
-\begin{itemize}
-	\item{abbiamo installato sul sistema, tra lo specchi mobile e lo specchi semitrasparente una piccola camera da vuoto;} %Infatti variando la pressione dell'aria interna alla camera da vuoto si varia l'indice di rifrazione di quest'ultima. Pertanto il cammino ottico compiuto dal raggio lumnoso riflesso risulta essere differente da quello del raggio luminoso rifratto;}
-	\item{partendo con la camera da vuoto a pressione atmosferica abbiamo man mano creato il vuoto all'interno della camera regolando l'apertura della valvola a spillo. Siamo arrivati ad una pressione limite di $10^{-4}\, \si{\pascal}$ ;}
-	\item{ad intervalli regolari di pressione, ogni $10^{-4}\, \si{\pascal}$ a scendere, abbiamo annotato il numero di frange di interferenza passate sullo schermo;}
-\end{itemize}
-
-\subsection{Analisi Dati}
-
-Per ricavare l'indice di rifrazione dell'aria abbiamo sfruttato la legge fisica che ci dice che:
-\begin{equation}
-	\text{numero di frange} \,=\, \frac{\text{cammino ottico}}{\lambda}
-\end{equation}
-dove con $\lambda$ si indica la lunghezza d'onda del laser.\\
-
-Ricordiamo che a condizione di pressione costante il cammino ottico percorso dai due raggi luminosi risulta essere lo stesso.
-Quindi lo scopo sarà quello di confrontare il numero di frange contate con la differenza di pressione rilevata. Infatti variando la pressione nella camera da vuoto si varia l'indice di rifrazione dell'aria. Questo provoca una variazione nel cammino ottico del raggio riflesso dallo specchio semitrasparente e quindi fenomeni di diffrazione che saranno sempre più accentuati man mano che l'indice di rifrazione dell'aria varia infunzione della pressione interna alla camera. buzz culo !!!!
-Sapendo che il cammino ottico è pari a due volte la lunghezza della camera da vuoto moltiplicata per lindice di rifrazione del gas ivi contenuto ...
