--- a/O4/Latex/Procedimento_Michelson.tex
+++ b/O4/Latex/Procedimento_Michelson.tex
@@ -9,14 +9,14 @@ La prima operazione fatta è stata quella di verificare il corretto allineamento
 
 Detto questo la procedura eseguita per ricavare l'indice di rifrazione dell'aria è la seguente:
 \begin{itemize}
-	\item{Abbiamo installato sul sistema, tra il beam splitter e lo specchio mobile, una piccola camera da vuoto con due pareti in vetro atte a far passare la luce. La camera è stata collegata, mediante la valvola a spillo alla pompa a membrana;} %Infatti variando la pressione dell'aria interna alla camera da vuoto si varia l'indice di rifrazione di quest'ultima. Pertanto il cammino ottico compiuto dal raggio lumnoso riflesso risulta essere differente da quello del raggio luminoso rifratto;}
+	\item{Abbiamo installato sul sistema, tra il beam splitter e lo specchio mobile, una piccola camera da vuoto con due pareti in vetro atte a far passare la luce. La camera è stata collegata, mediante la valvola a spillo alla pompa a membrana;}
     \item{Partendo con la camera da vuoto a pressione atmosferica abbiamo man mano creato il vuoto all'interno della camera regolando l'apertura della valvola a spillo. Aprendo la valvola a spillo (ovviamente con la pompa accesa), l'aria esce dalla camera da vuoto e viene pompata fuori;}
     \item{Ad intervalli regolari di pressione, ovvero ogni \SI{10}{\kilo\pascal}, abbiamo annotato il numero di frange di interferenza passate sullo schermo;}
 \end{itemize}
 
 \subsubsection{Indice di rifrazione del vetro}
 
-Per misurare l'indice di rifrazione del vetro abbiamo adottato una strategia simile. Dobbiamo partire da una data figura di interferenza e variare il cammino ottico di uno dei due raggi. Poi dobbiamo contare il numero di massimi di intensità (ovvero delle frange)
+Per misurare l'indice di rifrazione del vetro abbiamo adottato una strategia simile. Dobbiamo partire da una data figura di interferenza e variare il cammino ottico di uno dei due raggi. Poi dobbiamo contare il numero di massimi di intensità (ovvero dei punti )
 
 \subsection{Analisi Dati}
 
@@ -52,12 +52,23 @@ e quindi grazie all'interpolazione che verrà effettuata sul grafico mostrante i
 
 \begin{equation}
 	n\ped{patm} \,=\, 1 \,+\, \frac{N\ped{atm} \, \lambda}{D}
-	\label{eq:indice_rif_aria}
+	\label{eq:indice_rif_aria_atm}
 \end{equation}
 %
 
 Quindi ora avendo il quadro teorico che stà alla base dell'esperimento possiamo procedere con l'analizzare i dati che abbiamo ottenuto.
 
 \subsubsection{Valore indice di rifrazione dell'aria}
+
+
+%Infatti ponendo un vetro tra il beam splitter e lo specchio fisso si ottiene un effetto analogo a guello del caso precedete. Ovvero il raggio luminoso rifratto è costretto ad attraversare il vetro sia in andata che al ritorno e quindi subirà un variazione del suo cammino ottico.
+%Quindi la prima operazione neccessaria è quella di capire dove si trova lo zero di questo allineamento, ovvero quando i due raggi compiono lo stesso cammino ottico. Pertanto dopo aver posizionato il vetro, cercando di allinearlo con lo specchio fisso, si agisce sullo specchio mobile alontanandolo o avvicinandolo al beam spltter. Si fa questo al fine di ottenere una semplice figura di interferenza, che come nel caso precedete e una frangia luminosa.
+%A questo punto si segna l'angolo zero, che nel nostro caso ha il seguente vlore:
+
+%\begin{equation}
+%	\theta_0 \,=\, 2.2 \pm xxx (nonmeloricordo)
+%\end{equation}
+%
+
 
 \subsubsection{Indice di rifrazione del vetro}
