--- a/O4/Latex/Materiale_Michelson.tex
+++ b/O4/Latex/Materiale_Michelson.tex
@@ -4,7 +4,7 @@ Lo scopo in questa prima parte della relazione è quello di ricavare il valore d
 
 \subsection{Materiale}
 
-Il materiale a nostra disposizione era il seguente:
+Il materiale a nostra disposizione è il seguente:
 \begin{itemize}
 	\item{Interferometro di Michelson premontato e prealineato;}
     \item{Camera da vuoto e pompa a membrana per la misura dell'indice di rifrazione dell'aria;}
