--- a/O4/Latex/Procedimento_Michelson.tex
+++ b/O4/Latex/Procedimento_Michelson.tex
@@ -46,12 +46,13 @@ Per misurare l'indice di rifrazione del vetro abbiamo adottato una strategia sim
 
 Infatti ponendo un vetro tra il beam splitter e lo specchio fisso si ottiene un effetto analogo a guello del caso precedete. Ovvero il raggio luminoso rifratto è costretto ad attraversare il vetro sia in andata che al ritorno e quindi subirà un variazione del suo cammino ottico.
 Quindi la prima operazione neccessaria è quella di capire dove si trova lo zero di questo allineamento, ovvero quando i due raggi compiono lo stesso cammino ottico. Pertanto dopo aver posizionato il vetro, cercando di allinearlo con lo specchio fisso, si agisce sullo specchio mobile alontanandolo o avvicinandolo al beam spltter. Si fa questo al fine di ottenere una semplice figura di interferenza, che come nel caso precedete e una frangia luminosa.
-% questo punto si segna l'angolo zero, che nel nostro caso ha il seguente vlore:
+A questo punto si segna l'angolo zero, che nel nostro caso ha il seguente vlore:
 
 \begin{equation}
 	\theta_0 \,=\, 2.2 \pm xxx (nonmeloricordo)
 \end{equation}
 %
+e successvamente ruotando lo specchio ad ampiezze sempre maggiori si varia il cammino ottico del raggio luminoso rifratto. In tal modo si varia, non linarmente, il numero di frange che scorrono sullo schermo.
 
 \subsection{Analisi Dati}
 
