--- a/O4/Latex/Relazione.tex
+++ b/O4/Latex/Relazione.tex
@@ -8,6 +8,7 @@
 \usepackage{wrapfig}
 \usepackage{multirow}
 \usepackage{sidecap}
+\usepackage{subcaption}
 \usepackage{siunitx}
 \usepackage[font=small]{caption}
 \usepackage[bookmarks, hidelinks]{hyperref}
